# flight_cancellations

./: .gitignore  flights.csv  incoming_flights_by_country.csv  pyproject.toml  scratch.ipynb
