[project]
name = "flight-cancellations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
